@@ -1,3 +1,10 @@
+2007-04-17 Don Scorgie <Don@Scorgie.org>
+
+	* src/TextThought.py:
+	Fix thought boundaries when using attributes
+	Don't process (control) key presses when not editing
+
+
 2007-04-06 Don Scorgie <Don@Scorgie.org>
 
 	* src/MMapArea.py:
